@@ -46,7 +46,7 @@
 					<!-- Meshes -->
 					<mesh id="ifg" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="mono_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mono_in" visibility=":ife"/>
 					<mesh id="ofg" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="mono" visibility=":ofe"/>
-					
+
 					<mesh id="ag" width="3" color="graph_mesh" fill="true" fcolor="graph_mesh" fcolor.a="0.8" smooth="true"/>
 					<ui:if test=":num_filters ile 16">
 						<ui:for id="f" counter="i" list="16;25;40;63;100;160;250;400;630;1000;1600;2500;4000;6300;10000;16000">
@@ -174,7 +174,7 @@
 				<hbox spacing="4" bg.color="bg_schema" pad.h="6" pad.b="4" pad.t="4">
 					<label text="labels.mode"/>
 					<combo id="slope" pad.r="6"/>
-					<combo id="mode" pad.r="12"/>
+					<combo id="mode"/>
 				</hbox>
 			</align>
 		</vbox>
@@ -220,28 +220,36 @@
 					</vbox>
 				</grid>
 			</group>
-			<group text="groups.analysis" expand="true">
-				<grid rows="3" cols="2" transpose="false" expand="true" hspacing="4">
-					<align halign="-1" pad.t="4" pad.l="6">
-						<label text="labels.fft.fft"/>
-					</align>
-					<hbox spacing="4" pad.v="4" pad.h="6" hfill="false">
-						<button id="ife" text="labels.chan.in" height="19" width="30" ui:inject="Button_mono_8"/>
-						<button id="ofe" text="labels.chan.out" height="19" width="30" ui:inject="Button_mono_8"/>
-					</hbox>
-				
-					<knob id="react" size="20" pad.r="4"/>
-					<vbox vfill="false">
-						<label text="labels.metering.reactivity" halign="0"/>
-						<value id="react" width.min="50" sline="true" halign="0"/>
-					</vbox>
 
-					<knob id="shift" size="20" pad.r="4"/>
-					<vbox vfill="false">
-						<label text="labels.metering.shift" halign="0"/>
-						<value id="shift" width.min="50" sline="true" halign="0"/>
-					</vbox>
-				</grid>
+			<!-- Analysis -->
+			<group text="groups.analysis" expand="true" ipadding="0">
+				<vbox>
+					<grid rows="2" cols="2">
+						<align halign="-1" pad.t="4" pad.l="6">
+							<label text="labels.fft.fft"/>
+						</align>
+						<hbox spacing="4" pad.v="4" pad.h="6" hfill="false">
+							<button id="ife" text="labels.chan.in" height="19" width="30" ui:inject="Button_mono_8"/>
+							<button id="ofe" text="labels.chan.out" height="19" width="30" ui:inject="Button_mono_8"/>
+						</hbox>
+
+						<cell cols="2"><hsep pad.v="2" bg.color="bg" vreduce="true"/></cell>
+					</grid>
+
+					<grid rows="2" cols="2" transpose="false" hspacing="4">
+						<knob id="react" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
+							<label text="labels.metering.reactivity" halign="0"/>
+							<value id="react" width.min="50" sline="true" halign="0"/>
+						</vbox>
+
+						<knob id="shift" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
+							<label text="labels.metering.shift" halign="0"/>
+							<value id="shift" width.min="50" sline="true" halign="0"/>
+						</vbox>
+					</grid>
+				</vbox>
 			</group>
 		</vbox>
 
