@@ -45,43 +45,46 @@
 
 					<!-- Meshes -->
 
-					<mesh id="fftg_m" width="2" color="mid" visibility=":fftv_m"/>
-					<mesh id="fftg_s" width="2" color="side" visibility=":fftv_s"/>
-					<mesh id="ag_m" width="3" color="mid" fill="true" fcolor="mid" fcolor.a="0.8" smooth="true"/>
-					<mesh id="ag_s" width="3" color="side" fill="true" fcolor="side" fcolor.a="0.8" smooth="true"/>
+					<mesh id="ifg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="mid_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mid_in" visibility=":ife_m"/>
+					<mesh id="ifg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="side_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="side_in" visibility=":ife_s"/>
+					<mesh id="ofg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="mid" visibility=":ofe_m"/>
+					<mesh id="ofg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="side" visibility=":ofe_s"/>
+
+					<mesh id="ag_m" width="3" color="mid" fill="true" fcolor="mid" fcolor.a="0.8" smooth="true" visibility=":fltv_m"/>
+					<mesh id="ag_s" width="3" color="side" fill="true" fcolor="side" fcolor.a="0.8" smooth="true" visibility=":fltv_s"/>
 					<ui:if test=":num_filters ile 16">
 						<ui:for id="y" counter="i" list="14.62;23.27;36.74;58.48;92.83;146.20;232.70;367.45;584.80;928.32;1462.01;2326.97;3674.49;5848.04;9283.18;14620.09">
 							<marker ui:id="filter_markerm_${i}" v="${y}" ox="0" oy="1" color="mid" visibility="false"/>
-							<dot 
+							<dot
 								ui:id="filter_dotm_${i}"
-								x="${y}" y.id="gm_${i}" 
-								y.editable="true" 
-								pointer="hand" 
-								bsize="4" 
-								color="mid" 
-								hover.color="mid" 
-								bcolor="mid" 
-								hover.bcolor="mid" 
+								x="${y}" y.id="gm_${i}"
+								y.editable="true"
+								pointer="hand"
+								bsize="4"
+								color="mid"
+								hover.color="mid"
+								bcolor="mid"
+								hover.bcolor="mid"
 								visibility=":fvm_${i}"
 								y.astep="1"/>
 						</ui:for>
 						<ui:for id="y" counter="i" list="17.10;27.07;42.86;68.40;107.72;171.00;270.74;428.63;683.99;1077.22;1709.98;2707.39;4286.31;6839.91;10772.17;17099.76">
 							<marker ui:id="filter_markers_${i}" v="${y}" ox="0" oy="1" color="side" visibility="false"/>
-							<dot 
+							<dot
 								ui:id="filter_dots_${i}"
-								x="${y}" y.id="gs_${i}" 
-								y.editable="true" 
-								pointer="hand" 
-								bsize="4" 
-								color="side" 
-								hover.color="side" 
-								bcolor="side" 
-								hover.bcolor="side" 
+								x="${y}" y.id="gs_${i}"
+								y.editable="true"
+								pointer="hand"
+								bsize="4"
+								color="side"
+								hover.color="side"
+								bcolor="side"
+								hover.bcolor="side"
 								visibility=":fvs_${i}"
 								y.astep="1"/>
 						</ui:for>
 					</ui:if>
-					
+
 
 
 					<ui:if test=":num_filters igt 16">
@@ -111,6 +114,7 @@
 					<axis min="-48 db / :zoom" max="48 db * :zoom" angle="0.5" log="true" visibility="false"/>
 					<!-- -48..+48 dB -->
 					<axis min="-1" max="1" visible="false" angle="0.5"/>
+					<axis min="-48 db" max="48 db" angle="0.5" log="true" visibility="false"/>
 
 					<!-- Text -->
 					<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
@@ -151,17 +155,17 @@
 						<text y="-3 db" text="-3" valign="1"/>
 						<text y="-9 db" text="-9" valign="1"/>
 					</ui:with>
-					
+
 					<ui:if test=":num_filters ile 16">
 						<ui:for id="y" counter="i"
 							list="14.62;23.27;36.74;58.48;92.83;146.20;232.70;367.45;584.80;928.32;1462.01;2326.97;3674.49;5848.04;9283.18;14620.09">
-							<text 
+							<text
 								ui:id="filter_infom_${i}"
 								oy="2"
-								x="${y}" y="1" 
-								color="mid" 
-								visibility="false"								
-								halign="${(:y lt 500) ? 1 : -1}" 
+								x="${y}" y="1"
+								color="mid"
+								visibility="false"
+								halign="${(:y lt 500) ? 1 : -1}"
 								valign="-1"
 								text.halign="${(:y lt 500) ? -1 : 1}"
 								pad.h="4"
@@ -175,23 +179,23 @@
 								x="${y}" y="1"
 								color="side"
 								visibility="false"
-								halign="${(:y lt 500) ? 1 : -1}" 
+								halign="${(:y lt 500) ? 1 : -1}"
 								valign="-1"
 								text.halign="${(:y lt 500) ? -1 : 1}"
 								pad.h="4"
 							/>
 						</ui:for>
 					</ui:if>
-				
+
 					<ui:if test=":num_filters igt 16">
 						<ui:for id="y" counter="i" list="14.91;18.91;23.71;29.82;37.46;47.43;59.64;74.92;94.57;119.27;149.09;189.15;237.14;298.18;374.59;474.29;596.37;749.18;945.74;1192.74;1490.92;1891.48;2371.43;2981.84;3745.92;4742.86;5963.69;7491.83;9457.42;11927.37;14909.23;18914.82">
-							<text 					
+							<text
 								ui:id="filter_infom_${i}"
 								oy="2"
-								x="${y}" y="1" 
-								color="mid" 
-								visibility="false"								
-								halign="${(:y lt 500) ? 1 : -1}" 
+								x="${y}" y="1"
+								color="mid"
+								visibility="false"
+								halign="${(:y lt 500) ? 1 : -1}"
 								valign="-1"
 								text.halign="${(:y lt 500) ? -1 : 1}"
 								pad.h="4"
@@ -205,14 +209,14 @@
 								x="${y}" y="1"
 								color="side"
 								visibility="false"
-								halign="${(:y lt 500) ? 1 : -1}" 
+								halign="${(:y lt 500) ? 1 : -1}"
 								valign="-1"
 								text.halign="${(:y lt 500) ? -1 : 1}"
 								pad.h="4"
 							/>
 						</ui:for>
 					</ui:if>
-					
+
 				</graph>
 			</group>
 
@@ -282,20 +286,36 @@
 
 				</grid>
 			</group>
-			<group text="groups.analysis" expand="true">
+			<!-- Analysis -->
+			<group text="groups.analysis" expand="true" ipadding="0">
 				<vbox>
-					<label text="labels.fft.fft" halign="0"/>
-					<combo id="fft" fill="true"/>
+					<grid rows="4" cols="2">
+						<align halign="-1" pad.t="4" pad.l="6">
+							<label text="labels.fft.fft_in"/>
+						</align>
+						<hbox spacing="4" pad.v="4" pad.h="6" hfill="false"><button id="ife_m" text="labels.chan.M_id" size="19" ui:inject="Button_mid_8"/>
+							<button id="ife_s" text="labels.chan.S_ide" size="19" ui:inject="Button_side_8"/></hbox>
 
-					<grid rows="2" cols="2" transpose="false" expand="true" hspacing="4">
-						<knob id="react" size="20" pad.r="4"/>
-						<vbox vfill="false">
+						<cell cols="2"><hsep pad.v="2" bg.color="bg" vreduce="true"/></cell>
+
+						<align halign="-1" pad.t="4" pad.l="6">
+							<label text="labels.fft.fft_out" halign="0"/>
+						</align>
+						<hbox spacing="4" pad.v="4" pad.h="6" hfill="false"><button id="ofe_m" text="labels.chan.M_id" size="19" ui:inject="Button_mid_8"/>
+							<button id="ofe_s" text="labels.chan.S_ide" size="19" ui:inject="Button_side_8"/></hbox>
+
+						<cell cols="2"><hsep pad.v="2" bg.color="bg" vreduce="true"/></cell>
+					</grid>
+
+					<grid rows="2" cols="2" transpose="false" hspacing="4">
+						<knob id="react" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
 							<label text="labels.metering.reactivity" halign="0"/>
 							<value id="react" width.min="50" sline="true" halign="0"/>
 						</vbox>
 
-						<knob id="shift" size="20" pad.r="4"/>
-						<vbox vfill="false">
+						<knob id="shift" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
 							<label text="labels.metering.shift" halign="0"/>
 							<value id="shift" width.min="50" sline="true" halign="0"/>
 						</vbox>
