@@ -44,8 +44,12 @@
 					</ui:with>
 
 					<!-- Meshes -->
-					<mesh id="fftg_l" width="2" color="left" visibility=":fftv_l"/>
-					<mesh id="fftg_r" width="2" color="right" visibility=":fftv_r"/>
+
+					<mesh id="ifg_l" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="left_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="left_in" visibility=":ife_l"/>
+					<mesh id="ifg_r" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="right_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="right_in" visibility=":ife_r"/>
+					<mesh id="ofg_l" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="left" visibility=":ofe_l"/>
+					<mesh id="ofg_r" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="2" color="right" visibility=":ofe_r"/>
+
 					<mesh id="ag" width="3" color="graph_mesh" fill="true" fcolor="graph_mesh" fcolor.a="0.8" smooth="true"/>
 					<ui:if test=":num_filters ile 16">
 						<ui:for id="f" counter="i" list="16;25;40;63;100;160;250;400;630;1000;1600;2500;4000;6300;10000;16000">
@@ -92,6 +96,7 @@
 					<axis min="-48 db / :zoom" max="48 db * :zoom" angle="0.5" log="true" visibility="false"/>
 					<!-- -48..+48 dB -->
 					<axis min="-1" max="1" visible="false" angle="0.5"/>
+					<axis min="-48 db" max="48 db" angle="0.5" log="true" visibility="false"/>
 
 					<!-- Text -->
 					<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
@@ -172,9 +177,7 @@
 				<hbox spacing="4" bg.color="bg_schema" pad.h="6" pad.b="4" pad.t="4">
 					<label text="labels.mode"/>
 					<combo id="slope" pad.r="6"/>
-					<combo id="mode" pad.r="12"/>
-					<button id="fftv_l" height="22" width="45" text="labels.chan.left" ui:inject="Button_left"/>
-					<button id="fftv_r" height="22" width="45" text="labels.chan.right" ui:inject="Button_right"/>
+					<combo id="mode"/>
 				</hbox>
 			</align>
 		</vbox>
@@ -229,20 +232,36 @@
 
 				</grid>
 			</group>
-			<group text="groups.analysis" expand="true">
+			<!-- Analysis -->
+			<group text="groups.analysis" expand="true" ipadding="0">
 				<vbox>
-					<label text="labels.fft.fft" halign="0"/>
-					<combo id="fft" fill="true"/>
+					<grid rows="4" cols="2">
+						<align halign="-1" pad.t="4" pad.l="6">
+							<label text="labels.fft.fft_in"/>
+						</align>
+						<hbox spacing="4" pad.v="4" pad.h="6" hfill="false"><button id="ife_l" text="labels.chan.L_eft" size="19" ui:inject="Button_left_8"/>
+							<button id="ife_r" text="labels.chan.R_ight" size="19" ui:inject="Button_right_8"/></hbox>
 
-					<grid rows="2" cols="2" transpose="false" expand="true" hspacing="4">
-						<knob id="react" size="20" pad.r="4"/>
-						<vbox vfill="false">
+						<cell cols="2"><hsep pad.v="2" bg.color="bg" vreduce="true"/></cell>
+
+						<align halign="-1" pad.t="4" pad.l="6">
+							<label text="labels.fft.fft_out" halign="0"/>
+						</align>
+						<hbox spacing="4" pad.v="4" pad.h="6" hfill="false"><button id="ofe_l" text="labels.chan.L_eft" size="19" ui:inject="Button_left_8"/>
+							<button id="ofe_r" text="labels.chan.R_ight" size="19" ui:inject="Button_right_8"/></hbox>
+
+						<cell cols="2"><hsep pad.v="2" bg.color="bg" vreduce="true"/></cell>
+					</grid>
+
+					<grid rows="2" cols="2" transpose="false" hspacing="4">
+						<knob id="react" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
 							<label text="labels.metering.reactivity" halign="0"/>
 							<value id="react" width.min="50" sline="true" halign="0"/>
 						</vbox>
 
-						<knob id="shift" size="20" pad.r="4"/>
-						<vbox vfill="false">
+						<knob id="shift" size="20" pad.r="4" pad.l="6"/>
+						<vbox vfill="false" pad.r="6">
 							<label text="labels.metering.shift" halign="0"/>
 							<value id="shift" width.min="50" sline="true" halign="0"/>
 						</vbox>
